Fixed settings button for dark mode

--- a/Raw/raw.css
+++ b/Raw/raw.css
@@ -2460,17 +2460,9 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
 
 .theme-light button.button-2b6hmh.da-button.button-38aScr.da-button.lookBlank-3eh9lL.colorBrand-3pXr91.grow-q77ONN.da-grow {
     visibility: visible;
-    position: fixed;
-    bottom: 10%;
-    left: 50%;
-    transform: translate(-50%);
 }
 .theme-dark button.button-2b6hmh.da-button.button-38aScr.da-button.lookBlank-3eh9lL.colorBrand-3pXr91.grow-q77ONN.da-grow {
     visibility: visible;
-    position: unset;
-    bottom: auto;
-    left: auto;
-    margin-left: 16px;
 }
 .theme-light .flex-1xMQg5.flex-1O1GKY.da-flex.da-flex.horizontal-1ae9ci.horizontal-2EEEnY.flex-1O1GKY.directionRow-3v3tfG.justifyStart-2NDFzi.alignStretch-DpGPf3.noWrap-3jynv6.spacer-29U_x8.firefoxFixScrollFlex-cnI2ix.da-spacer.da-firefoxFixScrollFlex::before {
     content: "";
